--- a/gpprojecttest/gpprojecttest.vbproj
+++ b/gpprojecttest/gpprojecttest.vbproj
@@ -81,6 +81,12 @@
     <Compile Include="cinemadbDataSet.vb">
       <DependentUpon>cinemadbDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="frmListTickets.Designer.vb">
+      <DependentUpon>frmListTickets.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmListTickets.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="frmLoginX.Designer.vb">
       <DependentUpon>frmLoginX.vb</DependentUpon>
     </Compile>
@@ -158,6 +164,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="PendingTicket.vb" />
     <Compile Include="splashScreenCinema.Designer.vb">
       <DependentUpon>splashScreenCinema.vb</DependentUpon>
     </Compile>
@@ -167,6 +174,9 @@
     <Compile Include="User.vb" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="frmListTickets.resx">
+      <DependentUpon>frmListTickets.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmLoginX.resx">
       <DependentUpon>frmLoginX.vb</DependentUpon>
     </EmbeddedResource>
@@ -238,6 +248,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\GTA Cinema-logos_black1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Thor_Love_and_Thunder_poster.jpeg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\avatar_the_way_of_water.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\mat_kilau.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\CWq7aZyWcAAveUl.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\image-placeholder.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
