--- a/gpprojecttest/App.config
+++ b/gpprojecttest/App.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="gpprojecttest.My.MySettings.cinemadbConnectionString"
-            connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=&quot;C:\Users\ABDUL WAFI\Desktop\GitHub\cinema-project-vb\cinemadb.accdb&quot;"
+            connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=&quot;C:\Users\ABDUL WAFI\Desktop\cinema-project-vb(V1.2.2)\cinema-project-vb\cinemadb.accdb&quot;"
             providerName="System.Data.OleDb" />
     </connectionStrings>
     <startup>
